[package]
name = "magi"
version = "0.1.0"
authors = ["gggal <gggrudeva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.64"
rand = "0.8.3"
rand_pcg = "0.3.0"
rand_core = "0.6.2"
mockall = "0.9.1"
pest = "2.1.0"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
itertools = "0.8.0"