[package]
name = "talasum"
version = "0.1.0"
authors = ["gggal <gggrudeva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_pcg = "0.3.0"
mockall = "0.9.1"
pest = "2.1.0"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
itertools = "0.8.0"
config = "0.13.1"
serde_derive = "^1.0.8"
serde = "^1.0.8"
num-bigint = "0.4"